--- a/pdig/CMakeLists.txt
+++ b/pdig/CMakeLists.txt
@@ -6,11 +6,17 @@ if(NOT CMAKE_BUILD_TYPE)
     SET(CMAKE_BUILD_TYPE Release)
 endif()
 
-ADD_DEFINITIONS(-DUDIG)
-set(CMAKE_C_FLAGS_DEBUG "-Og -g -D_DEBUG -Wall")
-set(CMAKE_CXX_FLAGS_DEBUG "-Og -g -D_DEBUG -Wall")
-set(CMAKE_C_FLAGS_RELEASE "-O3 -DNDEBUG -Wall")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -Wall")
+option(MUSL_OPTIMIZED_BUILD "Enable if you want a musl optimized build" OFF)
+
+if(MUSL_OPTIMIZED_BUILD)
+  set(MUSL_OPTIMIZED_BUILD_FLAGS "-static -Os -DMUSL_OPTIMIZED")
+endif()
+
+add_definitions(-DUDIG)
+set(CMAKE_C_FLAGS_DEBUG "-Og -g -D_DEBUG -Wall ${MUSL_OPTIMIZED_BUILD_FLAGS}")
+set(CMAKE_CXX_FLAGS_DEBUG "-Og -g -D_DEBUG -Wall ${MUSL_OPTIMIZED_BUILD_FLAGS}")
+set(CMAKE_C_FLAGS_RELEASE "-O3 -DNDEBUG -Wall ${MUSL_OPTIMIZED_BUILD_FLAGS}")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -Wall ${MUSL_OPTIMIZED_BUILD_FLAGS}")
 
 if(NOT SYSDIG_DIR)
 	SET(SYSDIG_DIR ../sysdig)
